[package]
name = "uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.11.0"
actix-web-error = "0.2.0"
actix-web-lab = "0.24.2"
askama = "0.14.0"
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.42", features = ["derive"] }
constant_time_eq = "0.4.2"
futures = "0.3"
hmac = "0.12.1"
humantime = "2.2.0"
infer = "0.19.0"
mime = "0.3.16"
mime_guess = "2.0.5"
multer = "3.1.0"
once_cell = "1.21.3"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.47", features = ["fs"] }
toml = "0.9.4"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
